# fei

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  a.cpp  a.hpp  b.cpp
.github/workflows/: ci.yml
crates/fei-common/: Cargo.toml
crates/fei-common/macros/: Cargo.toml
crates/fei-common/macros/src/: lib.rs
crates/fei-common/src/: box_erased.rs  dyn_sparse_set.rs  dyn_vec.rs  ext.rs  lib.rs  ptr.rs  sparse_set.rs  sparse_set_erased.rs  vec_erased.rs
crates/fei-common/src/container/: dyn_vec.rs  mod.rs  sparse_set.rs
crates/fei-ecs/: Cargo.toml
crates/fei-ecs/crox/: fei_ecs-0007582.mm_profdata  fei_ecs-0007595.mm_profdata
crates/fei-ecs/macros/: Cargo.toml
crates/fei-ecs/macros/src/: lib.rs
crates/fei-ecs/src/: change.rs  lib.rs
crates/fei-ecs/src/component/: archetype.rs  change.rs  collection.rs  def.rs  mod.rs
crates/fei-ecs/src/entity/: collection.rs  def.rs
crates/fei-ecs/src/resource/: collection.rs  def.rs  mod.rs  param.rs
crates/fei-ecs/src/system/: def.rs  mod.rs  state.rs
crates/fei-ecs/src/world/: cell.rs  mod.rs  view.rs
crates/fei-macros/: Cargo.toml
crates/fei-macros/src/: lib.rs
src/: lib.rs
